<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carethy</string>
    <string name="display_button">Display</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_weight">Weight</string>
    <string name="settings_height">Height</string>
    <string name="settings_age">Age</string>
    <string name="settings_sex">Sex</string>
    <string name="settings_password">Change Password</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout">Logout</string>
    <string name="details_alarm_name">Medication Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Please Select an Alarm Ringtone</string>
    <string name="save_icon">Save</string>
    <string name="discard_icon">Delete</string>

    <string-array name="tracked_item_array">
        <item>Activities</item>
        <item>Sleep</item>
        <item>Heart Beats</item>
        <item>Bloody Pressures</item>
    </string-array>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="title_activity_password_recovery">Password Recovery</string>
    <string name="title_activity_create_medication">Create Medication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="drawer_menu_item_titles">
        <item>Home</item>
        <item>Activities</item>
        <item>Sleep</item>
        <item>Heart Beats</item>
        <item>Blood Pressures</item>
        <item>Trends</item>
        <item>Recommendations</item>
        <item>Medication</item>
        <item>Settings</item>
        <item>Change Data</item>
    </string-array>
    <string-array name="notification_times">
        <item>6AM</item>
        <item>12PM</item>
        <item>6PM</item>
        <item>12AM</item>
    </string-array>
    <string-array name="sample_data_files">
        <item>test_data_0.json</item>
        <item>test_data_1.json</item>
        <item>test_data_2.json</item>
        <item>test_data_3.json</item>
        <item>test_data_4.json</item>
    </string-array>
    <!--
         sample_data_files and user_data_files should have the same number of items because both are indexed by the same two variables
         currentDataFileId and nextDataFileId.
         Eventually, we should only have one sample_data_files
    -->
    <string-array name="user_data_files">
        <item>test_data_0.json</item>
        <item>test_data_1.json</item>
        <item>test_data_2.json</item>
        <item>test_data_3.json</item>
        <item>test_data_4.json</item>
    </string-array>
    <string-array name="notification_times_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="recommendation_category_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="settings_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="settings_sex_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_activity2</item>
        <item>@drawable/ic_sleep2</item>
        <item>@drawable/ic_heart_rate2</item>
        <item>@drawable/ic_blood_pressure2</item>
        <item>@drawable/ic_trends</item>
        <item>@drawable/ic_recommendations</item>
        <item>@drawable/ic_medication</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_settings</item>
    </array>

    <string name="desc_nav_drawer_item_icon">item icon</string>
    <string name="desc_logo">logo</string>
    <string name="desc_image_button">select date</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="terms_and_conditions">Carethy Terms and Conditions("Agreement")\nThis agreement was last modifited of February 18, 2014\n\nPlease read these Terms and conditions ("Agreement", "Terms and Conditions") carefully before using carethy.com ("the Site") operated by Carethy ("us", "we", or "our"). This Agreement sets forth the legally binding terms and conditions for you use of the Site at carethy.com.\n\nBy accessing orusing the Site in any manner, including, but not lmited to, visiting or browsing the Site or contribting content or other materials to the Site, you agree to be bound by these Terms and Conditions. Capitalized terms are defined in this Agreement.</string>
    <string name="medication_no">Currently no medication</string>
    <string name="medication_delete">Delete Medication</string>
    <string name="medication_summary">Add new medicine</string>
    <string name="medication_edit_confirm">Confirm</string>
    <string name="medication_edit_delete">Delete</string>
    <string name="medication_edit_timepicker">Pick time</string>
    <string name="medication_edit_datepicker">Pick date</string>

</resources>